--- a/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
+++ b/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
@@ -21,15 +21,27 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = TRU
 I highly recommend the fantastic video series [Essence of Linear Algebra](https://www.youtube.com/watch?v=fNk_zzaMoSs&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab) by [Grant Sanderson](https://twitter.com/3blue1brown). In this post I'll walk through how you can use `gganimate` and the `tidyverse` to (very loosely) recreate some of the visualizations shown in that series. Specifically those on matrix transformations and changing the basis vectors^[Which are shown throughout the series and most notably in chapters 3 and 13].
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kYB8IZa5AuE?start=234" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br/>
 
-  
-  
 This post is an offshoot of an (upcoming) post of my solutions to this week's [FiveThirtyEight Riddler](https://fivethirtyeight.com/features/can-you-solve-this-rather-pedestrian-puzzle/). To support my solution, I was trying to visualize matrix transformations. I reached-out to [Thomas Lin Peterson](https://twitter.com/thomasp85):
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I do not. Would love to see it, though🙂</p>&mdash; Thomas Lin Pedersen (@thomasp85) <a href="https://twitter.com/thomasp85/status/1230171239077105666?ref_src=twsrc%5Etfw">February 19, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-... figured I'd share what I've patched together so far `r emo::ji("smile")` (will just be looking at transformations by 2x2 matrices).
+... figured I'd share what I've patched together so far `r emo::ji("party_popper")` (will just be looking at transformations by 2x2 matrices).
 
-If you are not interested in walking through the R code, skip to [Visualizations].
+# Quick start
+
+I made a [gist](https://gist.github.com/brshallo/6a125f9c96dac5445cebb97cc62bfc9c)^[See section [Problems and potential improvements] for notes on a couple potential updates I'll make... not positive I'll keep the gist code updated.] containing the functions needed to produce a simple animation of a 2x2 matrix transformation. If you are reading this post with the sole goal of creating an animation like the one below^[And may not care about understanding how to do multiple transformations, adding additional layers, etc.], you can copy and run this code chunk to render a 2x2 matrix transformation gif (the input to argument `m` can be any *2x2* matrix of interest).
+
+```{r, eval = FALSE}
+if (!requireNamespace("devtools")) install.packages("devtools")
+devtools::source_gist("https://gist.github.com/brshallo/6a125f9c96dac5445cebb97cc62bfc9c")
+
+animate_matrix_transformation(m = matrix(c(0.5, 0.5, 0.5, -0.25), nrow = 2))
+```
+
+![](/post/2020-02-20-visualizing-matrix-transformations-with-gganimate_files/unnamed-chunk-13-1.gif)
+
+Over the next several sections I'll walk through the thinking behind this code building up to the [Visualizations] section^[Where this same animation will be shown again.]. Sections in the [Appendix] contain variations on this animation that add-on additional simple transformations and layers.
 
 # Helper functions
 
@@ -220,7 +232,7 @@ And there it is. To view a different matrix transformation, simply change the `t
 
 # Appendix
 
-The code used to construct images within the appendix is very similar to code already shown (so can largely be skimmed over).
+The code used to construct images within the appendix is very similar to code already shown^[Can largely skim over].
 
 ## Multiple matrix transformations
 
@@ -400,6 +412,7 @@ p_points + gganimate::transition_states(time, wrap = FALSE)
 * Would be nice to add `title` of image as the matrix transformation being conducted^[Would require latex title which I don't know if is supported by `gganimate`]
 * May be better to render to video (rather than gif) so could pause to view
 * In general, could make more elegant / sophisticated... especially regarding how transformations are applied across layers
+    * Would be nice if was set-up to apply the transformations across all (or specified layers) of a ggplot object.
 
 ## Note on scales
 
