--- a/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
+++ b/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
@@ -41,7 +41,7 @@ animate_matrix_transformation(m = matrix(c(0.5, 0.5, 0.5, -0.25), nrow = 2))
 
 ![](/post/2020-02-20-visualizing-matrix-transformations-with-gganimate_files/unnamed-chunk-13-1.gif)
 
-Over the next several sections I'll walk through the thinking behind this code (culminating in the [Visualizations] section, where this animation will be shown again.. Sections in the [Appendix] contain variations on this animation that add-on additional simple transformations and layers.
+Over the next several sections I'll walk through the thinking behind this code (culminating in the [Visualizations] section, where this animation will be shown again). Sections in the [Appendix] contain variations on this animation that add-on additional simple transformations and layers. 
 
 # Helper functions
 
