--- a/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
+++ b/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
@@ -18,7 +18,7 @@ tags:
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = TRUE)
 ```
 
-I highly recommend the fantastic video series [Essence of Linear Algebra](https://www.youtube.com/watch?v=fNk_zzaMoSs&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab) by [Grant Sanderson](https://twitter.com/3blue1brown). In this post I'll walk through how you can use `gganimate` and the `tidyverse` to (very loosely) recreate some of the visualizations shown in that series. Specifically those on matrix transformations and changing the basis vectors^[Which are shown throughout the series and most notably in chapters 3 and 13].
+I highly recommend the fantastic video series [Essence of Linear Algebra](https://www.youtube.com/watch?v=fNk_zzaMoSs&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab) by [Grant Sanderson](https://twitter.com/3blue1brown). In this post I'll walk through how you can use `gganimate` and the `tidyverse` to (very loosely) recreate some of the visualizations shown in that series. Specifically those on matrix transformations and changing the basis vectors^[Which are shown throughout the series and most notably in chapters 3 and 13.].
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kYB8IZa5AuE?start=234" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/>
@@ -236,7 +236,7 @@ The code used to construct images within the appendix is very similar to code al
 
 ## Multiple matrix transformations
 
-I love how the "Essence of Linear Algebra" series explains how matrix transformations can be thought-of / broken-down sequentially. The same visualization can be set-up here -- you just need to add-in the additional layer.
+I love how the "Essence of Linear Algebra" series explains how matrix transformations can be thought-of / broken-down sequentially. The same visualization can (kind-of) be set-up here -- you just need to add-in an additional layer.
 
 E.g. say, we want to apply a *rotation* and then a *sheer*: 
 ```{r}
@@ -261,6 +261,8 @@ $$\begin{bmatrix}
 \dfrac{\sqrt{2}}{2} & -\dfrac{\sqrt{2}}{2}\\
 \dfrac{\sqrt{2}}{2} & \dfrac{\sqrt{2}}{2} \\
 \end{bmatrix}X$$
+
+I say *kind-of* animate these because `gganimate` transforms coordinates linearly, hence while a transformation may result in a rotation, the in-between states (where `gganimate` fills in the gaps) will not look like a pure rotation. See [Potential improvements] for additional notes.
 
 *Construct grids:*
 ```{r}
@@ -348,9 +350,9 @@ X$$
 
 But thinking of the matrix transformations separately can be helpful!
 
-## Problems and potential improvements
+## Potential improvements
 
-I have no (current) plans of fleshing this out further. (Though I think a ggplot extension -- e.g. `ggbasis`, `gglineartrans` -- or something could be cool.)  In this section I'll give a few notes regarding short-term things I'd change or fix-up (if I were to keep working on this -- maybe I'll get to a couple of these).
+I have no (current) plans of fleshing this out further. (Though I think a ggplot extension -- e.g. `ggbasis`, `gglineartrans` -- or something could be cool.)  In this section I'll give a few notes regarding short-term things I'd change or fix-up (if I were to keep working on this -- maybe I'll get to a couple of these). Really I should dive into `tweenr` and `transformr` packages and associated concepts to get these worked out further.
 
 ### Problem of squeezing during rotation
 
@@ -377,7 +379,15 @@ However we can see this doesn't happen (the grid scrunches up and the exterior s
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The problem is that coords are tweened linearly which doesn&#39;t match a rotation where the tweening should be done on the radians (or, better, tween the transformation matrix instead). There is no support for this in gganimate yet because I haven&#39;t figured out the right interface</p>&mdash; Thomas Lin Pedersen (@thomasp85) <a href="https://twitter.com/thomasp85/status/1230773860321988608?ref_src=twsrc%5Etfw">February 21, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-One fix (irrespective of tweening method in `gganimate`) could be to make incremental layers (so that the lack of a true rotation wasn't noticable).
+Transformations that you *could* conceptualize of as rotations will be animated as linear changes to coordinates. As a more extreme example, see animation of a matrix transformation for a 180 rotation: 
+
+```{r, eval = FALSE}
+animate_matrix_transformation(m = matrix(c(-1, 0, 0, 1), nrow = 2))
+```
+
+![](/post/2020-02-20-visualizing-matrix-transformations-with-gganimate_files/transform_180degrees.gif)
+
+One fix (irrespective of tweening method in `gganimate`) could be to set specific coordinates at each frame (so that the lack of a true rotation wouldn't noticable)^[Though this gets into decomposing the rotation, etc. components of the matrix transformation of interest for each frame.].
 
 ### Problem of jittery points during rotation
 
@@ -410,7 +420,7 @@ p_points + gganimate::transition_states(time, wrap = FALSE)
 
 ### Miscellaneous notes
 
-* I could not figure out how to add [multiple polygons](https://ggplot2.tidyverse.org/reference/geom_polygon.html) via `geom_polygon()` in a way that kept smooth transitions^[Seems issue has to do with `group` needing to apply both to the polygon at a given time as well as points on the polygon across time.]. I should open an issue.
+* I could not figure out how to add [multiple polygons](https://ggplot2.tidyverse.org/reference/geom_polygon.html) via `geom_polygon()` in a way that kept smooth transitions^[Seems issue has to do with `group` needing to apply both to the polygon at a given time as well as points on the polygon across time.]. Would likely need to explore `tweenr`, `transformr`....
 * Would be nice to add `title` of image as the matrix transformation being conducted^[Would require latex title which I don't know if is supported by `gganimate`]
 * May be better to render to video (rather than gif) so could pause to view
 * In general, could make more elegant / sophisticated... especially regarding how transformations are applied across layers
