--- a/content/post/2020-02-24-animatrixr-visualizing-matrix-transformations-pt-2.Rmd
+++ b/content/post/2020-02-24-animatrixr-visualizing-matrix-transformations-pt-2.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
 This post is a continuation on my post from last week on [Visualizing Matrix Transformations with gganimate](https://www.bryanshalloway.com/2020/02/20/visualizing-matrix-transformations-with-gganimate/). Both posts are largely inspired by [Grant Sanderson's](https://twitter.com/3blue1brown) beautiful video series [The Essence of Linear Algebra](https://www.youtube.com/watch?v=kYB8IZa5AuE&list=PL_w8oSr1JpVCZ5pKXHKz6PkjGCbPbSBYv&index=4) and wanting to continue messing around with [Thomas Lin Peterson's](https://github.com/thomasp85/gganimate) fantastic [gganimate](https://github.com/thomasp85/gganimate) package in R.
 
-As with the last post, I'll describe trying to (very loosely) recreate a *small* part of the visualizations showing the geometry of matrix multiplication and changing basis vectors (using `gganimate` in R). 
+As with the last post, I'll describe trying to (very loosely) recreate a *small* part of the visualizations showing the geometry of matrix multiplication and changing basis vectors (using `gganimate` in R). (Once again, just in the 2x2 case.)
 
 If you are *really* interested in building visualizations like the ones shown on 3Blue1Brown, you should check-out the associated [manim](https://github.com/3b1b/manim) project on github.
 
