--- a/content/post/2020-03-04-riddler-solutions-pedestrian-puzzles.Rmd
+++ b/content/post/2020-03-04-riddler-solutions-pedestrian-puzzles.Rmd
@@ -16,7 +16,7 @@ tags:
 thumbnail: https://www.bryanshalloway.com/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/figure-html/unnamed-chunk-13-1.gif
 ---
 
-This post contains solutions to FiveThirtyEight’s two riddles released 2020-02-14, [Riddler Express] and [Riddler Classic]. I used [animatrixr](https://github.com/brshallo/animatrixr) (a toy package I wrote) to help with some of the visualizations and computations for this post. For more details on animating matrix transformations see my posts [here](https://www.bryanshalloway.com/2020/02/20/visualizing-matrix-transformations-with-gganimate/) and [here](https://www.bryanshalloway.com/2020/02/24/animatrixr-visualizing-matrix-transformations-pt-2/).
+This post contains solutions to FiveThirtyEight’s two riddles released 2020-02-14, [Riddler Express] and [Riddler Classic]. I used [animatrixr](https://github.com/brshallo/animatrixr)^[A toy package I wrote.] to help with some of the visualizations and computations for this post. For more details on animating matrix transformations see my posts [here](https://www.bryanshalloway.com/2020/02/20/visualizing-matrix-transformations-with-gganimate/) and [here](https://www.bryanshalloway.com/2020/02/24/animatrixr-visualizing-matrix-transformations-pt-2/).
 
 # Riddler express
 
@@ -60,22 +60,15 @@ df_start <- crossing(x = -radius:radius, y = -radius:radius) %>%
 
 *II. Calculate Manhattan Distances*
 
-I first calculated the [Manhattan Distance](https://en.wikipedia.org/wiki/Taxicab_geometry) in each scenario, which is just the shortest number of blocks that would need to be traveled to get between points. To calculate the Manhattan Distance on the new scenario, I first needed to find what the residences coordinates would be under the new grid. The new coordinate system could be thought of simply as a rotation and shrinking, which can be represented as applying the matrix transformation on the starting grid:
+I first calculated the [Manhattan Distance](https://en.wikipedia.org/wiki/Taxicab_geometry) in each scenario, which is just the shortest number of city blocks that would need to be traveled to get between points. To calculate the Manhattan Distance on the new scenario, I first needed to find what the residences coordinates would be in the new sidewalk grid. The new coordinate system could be thought of simply as a rotated and shrunken version of the existing grid, which can be represented as applying the matrix transformation:
 
 $$ M = \left(\begin{array}{cc} 0.5 & -0.5\\0.5  & 0.5 \end{array}\right)$$
 
-```{r, eval = FALSE}
-add_transformation(
-  m = matrix(c(0.5, 0.5,-0.5, 0.5), nrow = 2), 
-  seq_fun = seq_matrix_rotate_first) %>% 
-  animate_matrix()
-```
+![](/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/gif_city_pretty.gif)
 
-![](/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/gif_rotate_shrink.gif)
+See [Transform city, pretty] in the [Appendix] for code used to create above visualization.
 
-For a visualization that overlays the residences in our city see [Transform city, pretty] in the [Appendix].
-
-Our residences are not changing locations, we just have a new coordinate system -- hence we will actually apply the inverse^[In R, you can use the `solve()` function to give you the inverse of a matrix.] of this transformation to our starting coordinates. This will give us the position of our residences on the new (transformed) coordinate grid.
+Our residences are not changing locations, they would just have different coordinates specific to the new sidewalks -- hence we will actually apply the inverse^[In R, you can use the `solve()` function to give you the inverse of a matrix.] of this transformation to our starting coordinates. This will give us the position of our residences on the new (transformed) coordinate grid.
 
 $$ M^{-1} = \left(\begin{array}{cc} 1 & 1\\-1  & 1 \end{array}\right)$$
 
@@ -97,13 +90,15 @@ df_units <- df_trans %>%
 
 *IV: Multiply Manhattan lengths by length of a block:*
 
-The length of a block under the new and old scenarios are different (new scenario has shorter blocks), hence our current Manhattan lengths are not comparable. If we set the length of a single block on the original coordinate system as being 1 unit, then you can use the Pythagorean Theorem to find that the length of a block on the new sidewalks would be $\frac{\sqrt{2}}{2}$. We simply multiply our Manhattan lengths in each of our scenarios by their respective unit lengths (either 1 or ~0.7071). The scaled distances can now be compared.
+The length of a block under the new and old scenarios are different (new diagonal sidewalks have shorter blocks), hence our current Manhattan lengths are not comparable. If we set the length of a single block on the original coordinate system as being 1 unit, then you can use the Pythagorean Theorem to find that the length of a block on the new sidewalks would be $\frac{\sqrt{2}}{2}$. We simply multiply our Manhattan lengths in each of our scenarios by their respective unit lengths (either 1 or ~0.7071). 
 
 ```{r}
 df_dists <- df_units %>% 
   mutate(a_dist = 1 * a_units,
          b_dist = (sqrt(2) / 2) * b_units)
 ```
+
+The scaled distances can now be compared.
 
 *V. Aggregate proportion difference:*
 
@@ -117,7 +112,7 @@ df_dists %>%
 
 *Riddler express solution:* new diagonal sidewalks would be faster for 50% of people.
 
-We can visualize which resident's the new sidewalks would be faster for:
+Let's visualize which resident's the new sidewalks would be faster for:
 ```{r}
 df_dists %>% 
   mutate(diagonal_faster = b_dist < a_dist) %>% 
@@ -143,22 +138,22 @@ Under this second proposal, now what fraction of the employees would have a shor
 
 **My approach:**
 
-The Barcelona distance is just a combination of the Manhattan lengths of both the original and transformed (diagonal) grids (though with the unit lengths scaled differently). we have already done most of the computations we'll need and can follow similar steps to those taken in the [Riddler Express] solution.
-
-The unit lengths (i.e. individual city block length) for the horizontal and diagonal components will depend on what proportion^[In the diagram below, we will actually have it be a function of one-half of the proportion -- this is because there are two diagonoals adjoining each horizontal component.] of a side is horizontal vs diagonal (corresponding with the original vs transformed grid from the [Riddler Express] solution)^[This can also be thought of as the diagonal and the horizontal side lengths can be thought of as a function of the side-length, *x*, of a triangle created by a diagonal.].  
+The Barcelona distance is just a combination of the Manhattan lengths of both the original and diagonal sidewalk grids (though with the unit lengths scaled differently)^[We have already done most of the computations we'll need and can follow similar steps to those taken in the [Riddler Express] solution.]. The unit lengths (i.e. length of an individual city block, or in this case, part of a city block) for the horizontal and diagonal components will depend on what proportion^[In the diagram below, we will actually have it be a function of one-half of the inverse of the proportion -- this is because there are two diagonoals adjoining each horizontal component.] of a side is horizontal vs diagonal (corresponding with the original vs transformed grid from the [Riddler Express] solution)^[This can also be thought of as the diagonal and the horizontal side lengths can be thought of as a function of the side-length, *x*, of a triangle created by a diagonal.].  
 
 We can define our relevant side lengths as a function of x:
 
-![](/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/barcelona_dist.jpg){width=70%"}
+![](/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/barcelona_dist.jpg){width="50%"}
 
-$$x : \frac{proportion\;horizontal}{2}$$
+$$x : \frac{inverse\;of\;proportion\;horizontal}{2}$$
 $$0 < x < 0.5$$
-$$diagonal\;length = \sqrt{2}$$
+$$diagonal\;length = \sqrt{2}x$$
 $$horizontal\;length = 1 - 2x$$
 
-Note that if we set x = 0, the distance from each location would be equivalent to the distances in our starting (horizontal) grid, and if we set x = 0.5, the distances would be equal to those in our transformed (diagonal) grid^[Note that we are not taking into account the tiny differences that emerge regarding starting location for each resident (i.e. which point within a Barcelona square should they start). If we make the grid arbitrarily large, these differences become inconsequential -- hence we can ignore them.]. 
+*I'll start by setting x = 0.25.* Hence the Manhattan length of our horizontal component will be scaled by $\frac{1}{2}$, and our diagonal component will be scaled by $\frac{\sqrt{2}}{4}$. After scaling our components, we simply add them together to get our Barcelona distance[^1] [^2].
 
-I'll start by setting x = 0.25. Hence the Manhattan length of our horizontal component will be scaled by $\frac{1}{2}$, and our diagonal component will be scaled by $\frac{\sqrt{2}}{4}$. After scaling our components, we simply add them together to get our Barcelona distance.
+[^1]: Note that if we were to set x = 0, the distance from each location would be equivalent to the distances in our starting (horizontal) grid, and if we set x = 0.5, the distances would be equal to those in our transformed (diagonal) grid.
+
+[^2]: Note that we are not taking into account the tiny differences that emerge regarding starting location for each resident (i.e. which point within a Barcelona square should they start). If we make the grid arbitrarily large, these differences become inconsequential -- hence we can ignore them.
 
 ```{r}
 x <- 0.25
@@ -178,7 +173,7 @@ df_dists_abc %>%
   knitr::kable()
 ```
 
-In the case (when x is set to 0.25) we see the the proportion that is closer to City Hall (I.e. the center of our city^[The origin of our graph]) is again 50%. 
+In the case (when x is set to 0.25) we see the the proportion that is closer to City Hall (i.e. the center of our city^[The origin of our coordinate systems.]) is again 50%. 
 
 If we visualize in which locations the new Barcelona sidewalks have a shorter travel distance, we will see a similar result to that found in the [Riddler Express] solution.
 
@@ -191,9 +186,9 @@ df_dists_abc %>%
   ggforce::theme_no_axes()
 ```
 
-*We need to verify that 50% is our solution regardless of what we set for x.*
+*We need to verify that '50% have a shorter walk' is our solution regardless of what we set for x.*
 
-To accomplish this, I wrote a function `summarise_proportion()`, that will output the 'Proportion Barcelona sidewalk distance is shorter' across any *x*.
+To accomplish this, I wrote a function `summarise_proportion()`, that will output the 'Proportion Barcelona sidewalk distance is shorter' across any given x between 0 and 0.5 (the possible values x).
 
 ```{r}
 summarise_proportion <- function(x, df_start = df_dists, out_data = FALSE){
@@ -215,7 +210,7 @@ summarise_proportion <- function(x, df_start = df_dists, out_data = FALSE){
 }
 ```
 
-Then calculated the proportion the new route is faster for *x* set to $0.01, 0.05, 0.09,  ... 0.49$.
+Specifically I evaluated this for *x* set to each of $0.01, 0.05, 0.09,  ... 0.49$.
 
 ```{r}
 x_vec <- seq(from = 0.01, to = 0.49, by = 0.04)
@@ -227,7 +222,7 @@ df_summary %>%
   knitr::kable()
 ```
 
-For all of these, *the new 'Barcelona grid' is faster for 50% of people*.
+For each of these, *the new 'Barcelona grid' is faster for 50% of people*.
 
 # Appendix
 
@@ -248,7 +243,18 @@ df_dists_abc %>%
   coord_fixed()
 ```
 
-This suggests that if the city were square shaped (rather than circular) that the transformed (diagonal and Barcelona) sidewalks would have greater than 50% of the residents with a shorter travel distance to the center of the city.
+This suggests that if the city were square shaped (rather than a circle) that the transformed (diagonal and Barcelona) sidewalks would have greater than 50% of the residents with a shorter travel distance to the center of the city.
+
+## Transform grid, rotate first
+
+```{r, eval = FALSE}
+add_transformation(
+  m = matrix(c(0.5, 0.5,-0.5, 0.5), nrow = 2), 
+  seq_fun = seq_matrix_rotate_first) %>% 
+  animate_matrix()
+```
+
+![](/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/gif_rotate_shrink.gif)
 
 ## Transform city, pretty
 
@@ -284,3 +290,4 @@ p_pretty +
 ```
 
 ![](/post/2020-03-04-riddler-solutions-pedestrian-puzzles_files/gif_city_pretty.gif)
+
